--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link
@@ -27,15 +33,18 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script>
-      if ('serviceWorker' in navigator){
-        window.addEventListener('load',function() {
-          navigator.serviceWorker.register('/sw.js').then(function (registration) {
-            console.log('SW registered.');
-          }, function (err) {
-            console.log('Something bad happend :(', err);
-          })
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function() {
+          navigator.serviceWorker.register("/sw.js").then(
+            function(registration) {
+              console.log("SW registered.");
+            },
+            function(err) {
+              console.log("Something bad happend :(", err);
+            }
+          );
         });
-      };
+      }
     </script>
   </body>
 </html>
