--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <meta
-      http-equiv="Cache-Control"
-      content="no-cache, no-store, must-revalidate"
+            http-equiv="Cache-Control"
+            content="no-cache, no-store, must-revalidate"
     />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="manifest" href="manifest.json" />
-  </head>
-  <body>
-    <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+    <link rel="manifest" href="manifest.json"/>
+    <style>
+        html {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+</head>
+<body>
+<noscript>
+    <strong
+    >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
         properly without JavaScript enabled. Please enable it to
         continue.</strong
-      >
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function() {
-          navigator.serviceWorker.register("/sw.js").then(
-            function(registration) {
-              console.log("SW registered.");
-            },
-            function(err) {
-              console.log("Something bad happend :(", err);
-            }
-          );
+    >
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+<script>
+    if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+            navigator.serviceWorker.register("/sw.js").then(
+                function (registration) {
+                    console.log("SW registered.");
+                },
+                function (err) {
+                    console.log("Something bad happend :(", err);
+                }
+            );
         });
-      }
-    </script>
-  </body>
+    }
+</script>
+</body>
 </html>
