--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
+    <meta name="google-site-verification" content="Fe-hDbhTdoAKhC8Bn0T-cexuW13DgRseS5McawEOABE" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="manifest" href="manifest.json"/>
