Upgrade Node Package and Add hotjar

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <meta
             http-equiv="Cache-Control"
-            content="no-cache, no-store, must-revalidate"
-    />
+            content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
 
@@ -20,6 +19,18 @@
             padding: 0;
         }
     </style>
+
+    <!-- Hotjar Tracking Code for https://aiki-helpdesk-v1.firebaseapp.com/ -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:1956159,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
 </head>
 <body>
 <noscript>
