--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <meta name="google-site-verification" content="Fe-hDbhTdoAKhC8Bn0T-cexuW13DgRseS5McawEOABE" />
     <meta
             http-equiv="Cache-Control"
             content="no-cache, no-store, must-revalidate"/>
