Upgrade npm packages

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="manifest" href="manifest.json"/>
     <style>
-        html {
+        html,body {
             margin: 0;
             padding: 0;
         }
